2016-02-26 Philipp Klaus Krause <pkk AT spth.de>

	* .version,
	  src/stm8/peeph.def:
	  Implement RFE #557.

2016-02-18 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/gen.c,
	  support/regression/tests/bug-2715.c:
	  Fix bug #2715.
	* doc/sdccman.lyx:
	  Document treedec location.

2016-02-07 Philipp Klaus Krause <pkk AT spth.de>

	* .version,
	  doc/INSTALL.txt,
	  sdcc.spec:
	  Version 3.7.0

2017-02-07 Philipp Klaus Krause <pkk AT spth.de>

	* doc/sdccman.lyx:
	  Update for default build of lib for huge mcs51 memory model.

2017-02-06 Philipp Klaus Krause <pkk AT spth.de>

	* doc/sdccman.lyx:
	  Fixed a typo.

2017-02-05 Philipp Klaus Krause <krauseph AT informatik.uni-freiburg.de>

	* support/sdbinutils/bfd/doc/Makefile.am,
	  support/sdbinutils/bfd/doc/Makefile.in:
	  Fix bug #2711.

2017-01-31 Philipp Klaus Krause <krauseph AT informatik.uni-freiburg.de>

	* device/lib/strtol.c,
	  device/lib/strtoul.c,
	  support/regression/tests/strto.c,
	  device/include/stdlib.h,
	  device/lib/incl.mk:
	  Implement strtoul(), strtol() RFE #555.

2017-01-26 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCCpeeph.c:
	  Reduce memory usage in the peephole optimizer.
	  
2017-01-26 Philipp Klaus Krause <krauseph AT informatik.uni-freiburg.de>

	* device/include/stdlib.h,
	  device/lib/incl.mk,
	  device/lib/qsort.c,
	  support/regression/tests/qsort.c:
	  Implement qsort(), RFE #554.
	* device/lib/stm8/heap.s:
	  Increase stm8 default heapsize to 1KB size of other backends.
	* src/SDCCpeeph.c,
	  src/SDCCgen.c,
	  src/stm8/peep.c:
	  Code cleanup.

2017-01-24 Philipp Klaus Krause <pkk AT spth.de>

	* src/stm8/peep.c,
	  support/regression/tests/bug-2708.c:
	  Fix bug #2708.

2017-01-18 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCC.lex,
	  src/SDCCglobl.h,
	  src/SDCCmain.c:
	  Remove leftovers from deprecated nojtbound pragma and option.
	* doc/sdccman.lyx:
	  Update list of incompatible changes.
	* src/hc08/gen.c,
	  src/SDCCast.c,
	  device/lib/_rlulonglong.c,